<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App information-->
    <string name="app_name">TEACHomatic 3000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Die App für Lehrer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation Drawer List-->
    <string name="menu_home">Home</string>
    <string name="menu_classes">Klassen</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_students">Students</string>
    <string name="menu_lehrstoff">Lehrstoff erstellen</string>
    <string name="menu_lehrstoffübersicht">Lehrstoffübersicht</string>

    <!--General-->
    <string name="save">Speichern</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="bearbeitungsdatum">Bearbeitungsdatum: </string>
    <string name="erstelldatum">Erstelldatum: </string>

    <!--Errors-->
    <string name="error_long_input">Eingabe zu lang.</string>
...
    <!--Lehrstoff-->
    <string name="lehrstoff_text">Lehrstoff:</string>
    <string name="lehrstoff_uebersicht">Lehrstoffübersicht:</string>
    <string name="lehrstoff_add_text">Neuen Lehrstoff hinzufügen:</string>
    <string name="lehrstoff_description_text">Beschreibung des Lehrstoffs:</string>
    <string name="lehrstoff_add">Lehrstoff erstellen</string>
    <string name="lehrstoff_title">Lehrstofftitel</string>
    <string name="lehrstoff_id">Lehrstoff-ID</string>
    <string name="lehrstoff_description">Lehrstoffbeschreibung</string>
    <string name="lehrstoff_date">Lehrstoffdatum</string>
    <string name="lehrstoff_edit_title">Lehrstoff bearbeiten: </string>

    <!--Prüfungen-->
    <string name="prüfung_text">Prüfungen:</string>
    <string name="pruefung_add">Prüfung erstellen</string>
    <string name="prüfung_description">Prüfungsstoff</string>
...
